apps/base/onlineboutique/grpcroute-productcatalog.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: productcatalogservice
  namespace: onlineboutique
spec:
  parentRefs:
    - namespace: onlineboutique
      name: onlineboutique
      sectionName: grpc
  hostnames:
    - "boutique-product.${domain_name}"
  rules:
    - matches:
        - method:
            service: hipstershop.ProductCatalogService
            method: ListProducts
      backendRefs:
        - name: productcatalogservice
          port: 3550
