apps/base/onlineboutique/httproute-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onlineboutique
  namespace: onlineboutique
spec:
  parentRefs:
    - name: onlineboutique
      namespace: onlineboutique
      sectionName: https
  hostnames:
    - "boutique.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
